crates/cella-features/src/snapshots/cella_features__dockerfile__tests__all_metadata_only.snap
---
source: crates/cella-features/src/dockerfile.rs
expression: result
---
ARG _DEV_CONTAINERS_BASE_IMAGE=ubuntu:22.04
ARG _DEV_CONTAINERS_IMAGE_USER=vscode
ARG _DEV_CONTAINERS_FEATURE_CONTENT_SOURCE

FROM $_DEV_CONTAINERS_BASE_IMAGE AS dev_containers_target_stage
