crates/cella-features/src/snapshots/cella_features__dockerfile__tests__builtin_env_content.snap
---
source: crates/cella-features/src/dockerfile.rs
expression: env
---
_CONTAINER_USER=vscode
_REMOTE_USER=vscode
