crates/cella-features/src/snapshots/cella_features__dockerfile__tests__builtin_env_different_users.snap
---
source: crates/cella-features/src/dockerfile.rs
expression: env
---
_CONTAINER_USER=developer
_REMOTE_USER=admin
