crates/cella-features/src/snapshots/cella_features__dockerfile__tests__dockerfile_with_entrypoint.snap
---
source: crates/cella-features/src/dockerfile.rs
expression: result
---
ARG _DEV_CONTAINERS_BASE_IMAGE=ubuntu:22.04
ARG _DEV_CONTAINERS_IMAGE_USER=root
ARG _DEV_CONTAINERS_FEATURE_CONTENT_SOURCE

FROM $_DEV_CONTAINERS_BASE_IMAGE AS dev_containers_target_stage

USER root

COPY devcontainer-features.builtin.env /tmp/dev-container-features/devcontainer-features.builtin.env
RUN echo "_CONTAINER_USER_HOME=$( (command -v getent >/dev/null 2>&1 && getent passwd 'root' || grep -E '^root:' /etc/passwd || true) | cut -d: -f6)" >> /tmp/dev-container-features/devcontainer-features.builtin.env \
    && echo "_REMOTE_USER_HOME=$( (command -v getent >/dev/null 2>&1 && getent passwd 'root' || grep -E '^root:' /etc/passwd || true) | cut -d: -f6)" >> /tmp/dev-container-features/devcontainer-features.builtin.env

# Feature: feature-a (ghcr.io/example/feature-a:1)
COPY --chown=root:root feature-a/ /tmp/dev-container-features/feature-a/
RUN chmod -R 0755 /tmp/dev-container-features/feature-a \
    && cd /tmp/dev-container-features/feature-a \
    && chmod +x ./devcontainer-features-install.sh \
    && ./devcontainer-features-install.sh \
    && rm -rf /tmp/dev-container-features/feature-a

RUN rm -rf /tmp/dev-container-features && chmod 1777 /tmp

ARG _DEV_CONTAINERS_IMAGE_USER
USER $_DEV_CONTAINERS_IMAGE_USER
