crates/cella-features/src/snapshots/cella_features__dockerfile__tests__entrypoint_from_metadata_only_feature.snap
---
source: crates/cella-features/src/dockerfile.rs
expression: script
---
#!/bin/sh
# Entrypoints from devcontainer features
/usr/local/share/meta-init.sh
exec "$@"
