crates/cella-features/src/snapshots/cella_features__dockerfile__tests__entrypoint_script_generated.snap
---
source: crates/cella-features/src/dockerfile.rs
expression: script
---
#!/bin/sh
# Entrypoints from devcontainer features
/usr/local/share/feature-a-init.sh
/usr/local/share/feature-b-init.sh
exec "$@"
