crates/cella-features/src/snapshots/cella_features__dockerfile__tests__feature_env_with_options.snap
---
source: crates/cella-features/src/dockerfile.rs
expression: env
---
NODEGYPDEPENDENCIES="true"
VERSION="18"
