crates/cella-features/src/snapshots/cella_features__dockerfile__tests__feature_with_no_options.snap
---
source: crates/cella-features/src/dockerfile.rs
expression: result
---
ARG _DEV_CONTAINERS_BASE_IMAGE=ubuntu:22.04
ARG _DEV_CONTAINERS_IMAGE_USER=root
ARG _DEV_CONTAINERS_FEATURE_CONTENT_SOURCE

FROM $_DEV_CONTAINERS_BASE_IMAGE AS dev_containers_target_stage

# Feature: minimal (ghcr.io/example/minimal:1)
COPY --chown=root:root minimal/ /tmp/dev-container-features/minimal/
RUN chmod +x /tmp/dev-container-features/minimal/install.sh \
    && cd /tmp/dev-container-features/minimal \
    && ./install.sh

# Cleanup
RUN rm -rf /tmp/dev-container-features
